--- a/deployment.yaml
+++ b/deployment.yaml
@@ -31,7 +31,8 @@ spec:
     spec:
       containers:
         - name: deploy-react-kubernetes
-          image: registry.<ibm_cloud_region>.bluemix.net/<your_namespace>/deploy-react-kubernetes
+          # image: registry.<ibm_cloud_region>.bluemix.net/<your_namespace>/deploy-react-kubernetes
+          image: ${ORIGIN_REPO}/${REPO}:${IMAGE_TAG2}
           # PullPolicy: Always
           ports:
             - containerPort: 3000
