--- a/deployment.yaml
+++ b/deployment.yaml
@@ -8,10 +8,11 @@ spec:
   # type: NodePort
   type: LoadBalancer
   ports:
-  - port: 3000
-    name: http
+  - port: 80
+    # name: http
+    name: deploy-react-kubernetes
     # nodePort: 30080
-    targetPort: 80
+    targetPort: 3000
   selector:
     app: app
 ---
